2003-03-07  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/epsonepl-PrintoutMode.xml: Corrected resolutions.

2003-03-06  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Minolta-magicolor_2300_DL.xml: Added the Minolta/QMS
	  magicolor 2300 DL.
	
	* printer/HP-LaserJet_1000.xml: Let "foo2zjs" be the recommended
	  driver for the HP LaserJet 1000. Re-rated the printer to
	  "Mostly".
	
	* driver/foo2zjs.xml, opt/foo2zjs-*.xml, driver/pbmtozjs.xml,
	  printer/Generic-GDI_Printer.xml: Added "foo2zjs" driver for
	  Zenographics-based printers.
	
	* printer/Epson-EPL-6100.xml, printer/Epson-EPL-6100L.xml,
	  printer/Epson-EPL-6100PS.xml, printer/Epson-AcuLaser_C8600.xml
	  printer/Epson-AcuLaser_C8600PS.xml, driver/epl6100.xml,
	  driver/alc8600.xml, driver/pxlmono.xml, driver/Postscript.xml,
	  driver/lj5gray.xml, driver/lj5mono.xml, driver/ljet4.xml,
	  opt/2.xml, opt/6.xml, opt/145.xml, opt/159.xml, opt/160.xml,
	  opt/eplXXXX-*.xml, pxlmono-GSResolution.xml,
	  Postscript-Resolution.xml: Added Epson laser printers.
	
	* printer/312297.xml, printer/Epson-EPL-5800L.xml,
	  printer/Epson-EPL-5900L.xml, driver/epl5?00l.xml,
	  opt/epsonepl-Dpi.xml: Corrections and improvements on the web
	  page and option choice texts. Added support for Epson EPL-6100L.

2003-03-05  Tim Waugh  <twaugh@redhat.com>

	* driver/Postscript.xml: Add work-around for Canon GP405
          (https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=85553).

	* db/source/opt/Postscript-Resolution.xml: New option 'Printer
	  Default' for printers that balk at '/HWResolution'
	  (https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=85553).

	* opt/162.xml: New option 'Not capable' for printers that balk at
	  '/Duplex false'
	  (https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=82385).

2003-03-03  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/312297.xml, printer/Epson-EPL-5800L.xml,
	  printer/Epson-EPL-5900L.xml, driver/epl5?00l.xml,