@@ -1,6 +1,6 @@
-<printer id="printer/HP-OfficeJet_D155">
+<printer id="printer/HP-OfficeJet_7110">
   <make>HP</make>
-  <model>OfficeJet D155</model>
+  <model>OfficeJet 7110</model>
   <mechanism>
     <inkjet/>
     <color/>
@@ -16,7 +16,7 @@
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://www.hp.com/cposupport/nonjsnav/hpofficeje64981.html</url>
+  <url>http://productfinder.support.hp.com/tps/Hub?h_lang=en&amp;h_cc=all&amp;h_tool=prodhomes&amp;h_product=hpofficeje91473</url>
   <lang>
     <pcl level="3"/><!--no pjl-->
     <text>
@@ -25,9 +25,9 @@
   </lang>
   <autodetect>
     <general>
-      <ieee1284>MFG:Hewlett-Packard;MDL:officejet d series;CMD:MLC,PCL,PML,DW-PCL,BIDI-ECP;CLASS:PRINTER;</ieee1284>
+      <ieee1284>MFG:Hewlett-Packard;MDL:officejet 7100 series;CMD:MLC,PCL,PML,DW-PCL,BIDI-ECP;CLASS:PRINTER;</ieee1284>
       <manufacturer>Hewlett-Packard</manufacturer>
-      <model>officejet d series</model>
+      <model>officejet 7100 series</model>
       <commandset>MLC,PCL,PML,DW-PCL,BIDI-ECP</commandset>
     </general>
   </autodetect>
@@ -37,15 +37,7 @@
   <comments>
     <en>
 
-    As the HP OfficeJet D135, but with extra 250-sheets tray (400
-    sheets total, tray selection supported by &quot;hpijs&quot;
-    driver), a duplex unit (works with &quot;hpijs&quot;,
-    &quot;cdj970&quot;, and &quot;pcl3&quot; drivers), photo card
-    reader (accessible with &lt;a
-    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;),
-    and network adapter.&lt;p&gt;
-
-    Multifunction device: printer/scanner/copier. The integrated
+    Multifunction device: printer/scanner/copier/fax. The integrated
     flatbed scanner has an automatic document feeder and is
     legal-sized.&lt;p&gt;
 
@@ -79,8 +71,8 @@
 
     PC-faxing is not supported with free software.&lt;p&gt;
 
-    USB and ethernet connection, optional adapter available for
-    parallel connection.&lt;p&gt;
+    USB-only, optional adapter available for parallel
+    connection.&lt;p&gt;
 
     For printing via USB you NEED to set up this printer with &lt;a
     href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt; or
@@ -89,7 +81,7 @@
     href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
     web site, even if you do not want to scan or access photo memory
     cards from the PC.&lt;p&gt;
+
     </en>
   </comments>
 </printer>
-
