@@ -1,6 +1,6 @@
-<printer id="printer/HP-OfficeJet_D155">
+<printer id="printer/HP-OfficeJet_7130">
   <make>HP</make>
-  <model>OfficeJet D155</model>
+  <model>OfficeJet 7130</model>
   <mechanism>
     <inkjet/>
     <color/>
@@ -16,7 +16,7 @@
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://www.hp.com/cposupport/nonjsnav/hpofficeje64981.html</url>
+  <url>http://productfinder.support.hp.com/tps/Hub?h_lang=en&amp;h_cc=all&amp;h_tool=prodhomes&amp;h_product=hpofficeje91467</url>
   <lang>
     <pcl level="3"/><!--no pjl-->
     <text>
@@ -25,9 +25,9 @@
   </lang>
   <autodetect>
     <general>
-      <ieee1284>MFG:Hewlett-Packard;MDL:officejet d series;CMD:MLC,PCL,PML,DW-PCL,BIDI-ECP;CLASS:PRINTER;</ieee1284>
+      <ieee1284>MFG:Hewlett-Packard;MDL:officejet 7100 series;CMD:MLC,PCL,PML,DW-PCL,BIDI-ECP;CLASS:PRINTER;</ieee1284>
       <manufacturer>Hewlett-Packard</manufacturer>
-      <model>officejet d series</model>
+      <model>officejet 7100 series</model>
       <commandset>MLC,PCL,PML,DW-PCL,BIDI-ECP</commandset>
     </general>
   </autodetect>
@@ -37,17 +37,14 @@
   <comments>
     <en>
 
-    As the HP OfficeJet D135, but with extra 250-sheets tray (400
-    sheets total, tray selection supported by &quot;hpijs&quot;
-    driver), a duplex unit (works with &quot;hpijs&quot;,
-    &quot;cdj970&quot;, and &quot;pcl3&quot; drivers), photo card
-    reader (accessible with &lt;a
-    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;),
-    and network adapter.&lt;p&gt;
+    As the HP OfficeJet 7110, but with a duplex unit (works with
+    &quot;hpijs&quot;, &quot;cdj970&quot;, and &quot;pcl3&quot;
+    drivers) and a photo card reader (accessible with &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;).&lt;p&gt;
 
-    Multifunction device: printer/scanner/copier. The integrated
-    flatbed scanner has an automatic document feeder and is
-    legal-sized.&lt;p&gt;
+    Multifunction device: printer/scanner/copier/fax/photo card
+    access. The integrated flatbed scanner has an automatic document
+    feeder and is legal-sized.&lt;p&gt;
 
     Prints perfectly with HP&apos;s &quot;hpijs&quot; driver and
     reasonably well (up to 600 dpi) with various &quot;cdj*&quot;,
@@ -69,7 +66,7 @@
     resolution mode where the image is rendered in 1200 dpi, without
     paper detection, intended for photo paper only.&lt;p&gt;
 
-    Scanning works using the &lt;a
+    Scanning and photo memory card access work using the &lt;a
     href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
     low-level driver together with its &lt;a
     href=&quot;http://panda.mostang.com/sane/&quot;&gt;SANE&lt;/a&gt;
@@ -79,8 +76,8 @@
 
     PC-faxing is not supported with free software.&lt;p&gt;
 
-    USB and ethernet connection, optional adapter available for
-    parallel connection.&lt;p&gt;
+    USB-only, optional adapter available for parallel
+    connection.&lt;p&gt;
 
     For printing via USB you NEED to set up this printer with &lt;a
     href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt; or
