@@ -1,0 +1,63 @@
+<printer id="printer/HP-PSC_1205">
+  <make>HP</make>
+  <model>PSC 1205</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>
+        1 colour (CMY) cartridge and 1 black (K) cartridge
+        </en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <proprietary /><!--no pjl-->
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Hewlett-Packard;MDL:psc 1200 series;CMD:LDL,MLC,PML,DYN;CLS:PRINTER;</ieee1284>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>psc 1200 series</model>
+      <commandset>LDL,MLC,PML,DYN</commandset>
+    </general>
+  </autodetect>
+  <functionality>B</functionality>
+  <!--no "contrib_url"-->
+  <driver>hpijs</driver>
+  <comments>
+    <en>
+
+    Very cheap entry level multi-function
+    device. Printer/scanner/copier.&lt;p&gt;
+
+    Does not understand PCL as most other DeskJets/PSCs/OfficeJets, it
+    uses the so-called &quot;Lightweight Imaging Device Interface
+    Language&quot; (LIDIL), these printers are supported by the
+    &quot;hpijs&quot; driver beginning from version 1.3. The driver
+    supports resolutions only up to 600 dpi, head alignment settings
+    stored in the printer are not made use of, so use a one-cartridge
+    (CMY) printing mode in case of mis-alignments.&lt;p&gt;
+
+    Scanning works using the &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
+    low-level driver together with its &lt;a
+    href=&quot;http://panda.mostang.com/sane/&quot;&gt;SANE&lt;/a&gt;
+    backend &quot;hpoj&quot;, but note that when using the current version
+    (0.9) you can only scan, and when you don&apos;t use HPOJ at all you
+    can only print. This is fixed in the CVS of HPOJ. With the
+    current CVS version you can both print and scan.&lt;p&gt;
+    
+    Copying works fine from the front panel.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
