@@ -1,0 +1,82 @@
+<printer id="printer/HP-PhotoSmart_7345">
+  <make>HP</make>
+  <model>PhotoSmart 7345</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>4800</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Refill: 1 black or photo, 1 color cartridge</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://h20015.www2.hp.com/en/product.jhtml?lc=en&amp;pagetype=hpphotosma213998</url>
+  <lang>
+    <pcl level="3"/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
+  <!--verified--><!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    It has ports on the side for inserting SmartMedia, CompactFlash,
+    SD, and Memory Stick digital &quot;film&quot; and has an LCD panel
+    that lets you select pictures from the &quot;film&quot; to print,
+    so one can use the device as a digital photo lab without
+    PC.&lt;p&gt;
+
+    Up/downloading of photos between the PC and the printer/memory
+    card works with the &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
+    low level driver.&lt;p&gt;
+
+    It has a USB port on its front side to directly connect a digital
+    camera (HP only).&lt;p&gt;
+
+    Full-Bleed printing is supported with &quot;hpijs&quot;.&lt;p&gt;
+
+    Best output quality reachable with the &quot;hpijs&quot; driver
+    (printer compatible to HP DeskJet 990C), especially the 1200-dpi
+    high resolution mode gives excellent photo quality.&lt;p&gt;
+
+    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
+    auto-detects the paper type and ink cartridge type and does
+    appropriate dithering and colour adjustment internally, controlled
+    by the hardware. So even when GhostScript with the
+    &quot;hpijs&quot; driver only renders the image with 300 or 600
+    dpi, the higher resolutions are used for the internal
+    dithering. So if you insert photo paper, the printer will print in
+    photo quality, no paper type choice in the driver&apos;s options
+    is needed. There is also a special high resolution mode where the
+    image is rendered in 1200 dpi and interpolated to 4800x1200 dpi by
+    the hardware, without paper detection, intended for photo paper
+    only.&lt;p&gt;
+
+    This printer supports an optional duplex unit (probably supported
+    by the &quot;hpijs&quot;, &quot;cdj970&quot;, and &quot;pcl3&quot;
+    drivers).&lt;p&gt;
+
+    To print via USB you NEED to set up this printer with &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt; or
+    you have to use the modifed USB printer.c kernel module from the
+    &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
+    web site, even if you do not want to access photo memory cards
+    from the PC.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
+
