@@ -1,5 +1,10 @@
 2003-03-07  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* printer/HP-OfficeJet_71??.xml, printer/HP-PSC_12??.xml,
+	  printer/HP-PhotoSmart_7345.xml: Added new printer models.
+
+	* printer/HP-OfficeJet_D155.xml: Text xorrection.
+
 	* opt/epsonepl-PrintoutMode.xml: Corrected resolutions.
 
 2003-03-06  Till Kamppeter <till.kamppeter@gmx.net>
